updates to img files and page content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="styles/main.css" rel="stylesheet">
   </head>
 
   <body>
@@ -36,6 +36,7 @@
         </div>
 
       <footer class="footer">
+        <center> <img src="images/tfLogoS.png"></center> 
         <p>&copy; 2016 Third Fusion LLC.</p>
       </footer>
 
