updates to homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        
       <ul class="nav navbar-nav">
-          <a href="#/home"><img src="images/tfLogoS.png" id="toplogo"> </a>
+          <a href="#/home"><img src="images/tfLogoSlt.png" id="toplogo"> </a>
             <li role="presentation" class="active"><a href="#/home">Home</a></li>
             <li role="presentation"><a href="#/about">About</a></li>
             <li role="presentation"><a href="#/services">Services</a></li>
@@ -49,7 +49,7 @@
 
       
 
-        <div class="container-fluid">
+        <div>
             <div ng-view></div>
         </div>
 
