Add routes,links and stub pages for detail services and portfolio pages.

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,10 @@
-<h1>About page</h1>
+<h1>About</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+
+           <p class="text-center" id="aboutText">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum, erat in imperdiet tincidunt, mi quam condimentum <br> lacus, eu dignissim est felis at nunc. Cras a scelerisque augue.
+        </p>
+    </div>
+</div>
