--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,1 +1,78 @@
 <h1>Portfolio page</h1>
+<div id="Portfolio" class="container-fluid">
+    <ul class="caption-style-4" id="ulimg">
+        <div class="row">
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/fooddrinks.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <h4 class="text-center">FOOD & DRINK</h4>
+
+                        <center> <a href="/portfolio/food-drink" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/retailfasion.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <h4 class="text-center">RETAIL & FASION</h4>
+
+                        <center> <a href="/portfolio/retail-fashion" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/salon.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <center> <h4 class="text-center">HEALTH & BEAUTY</h4></center>
+
+                        <center> <a href="/portfolio/health-beauty" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+        </div>
+        <div class="row">
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/auto.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <h4 class="text-center">SERVICES</h4>
+
+                        <center> <a href="/portfolio/automotive" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/ent.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <h4 class="text-center">ENTERTAINMENT</h4>
+
+                        <center> <a href="/portfolio/entertainment" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+
+            <li class="col-md-4">
+                <img class="img-responsive portimg" src="images/more.png">
+                <div class="caption">
+                    <div class="blur"></div>
+                    <div class="caption-text">
+                        <h4 class="text-center">MORE...</h4>
+
+                        <center> <a href="/portfolio" class="btn btn-md btn-default">Link</a></center>
+                    </div>
+                </div>
+            </li>
+        </div>     
+    </ul>
+</div>
