--- a/pages/services.html
+++ b/pages/services.html
@@ -1,1 +1,32 @@
 <h1>Services Page</h1>
+<div class="row overlayImg">
+
+    <div class="col-md-4 text-center">
+        <h3>Responsive Website Design</h3>
+        <h4>Let us help you keep your brand consistant across all             
+            platforms</h4>
+            <img class="image-responsive photoSvc" src="images/responsivePhoto.png">
+            <center> <a href="/services/webdesign" class="btn btn-md btn-success">Learn More</a></center>
+    </div>
+    <div class="col-md-4 text-center">
+        <h3>Mobile Apps for your business</h3>
+        <h4>Build your customer loyalty with your own mobile app for your   
+            business</h4>
+            <img class="image-responsive photoSvc" src="images/appPhoto.png">
+            <center> <a href="/services/mobileapps" class="btn btn-md btn-success">Learn More</a></center>
+        </div>
+        <div class="col-md-4 text-center">
+            <h3>Custom Photography & Videography</h3>
+            <h4>Add a personal touch to your site with our custom photography</h4>
+            <img src="images/camera.png" class="image-responsive photoSvc">
+            <center> <a href="/services/photography-videos" class="btn btn-md btn-success">Learn More</a></center>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="text-center">Business Solutions that <br> Drive results</h2>
+            <center> <img src="images/appInfo.png" class="image-responsive"></center>
+        </div>    
+    </div>
+</div>
