--- a/index.html
+++ b/index.html
@@ -1,77 +1,72 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en" ng-app="app">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Third Fusion</title>
+    <title>Third Fusion</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="styles/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <base href="/">
-</head>
+    <!-- Bootstrap core CSS -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <base href="/">
+  </head>
 
-<body>
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+  <body>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-      </div>
+        </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-        <ul class="nav navbar-nav">
-          <a href="/"><img src="images/tfLogoSlt.png" id="toplogo"> </a>
-          <li role="presentation" class="active"><a href="/">Home</a></li>
-          <li role="presentation"><a href="/about">About</a></li>
-          <li role="presentation"><a href="/services">Services</a></li>
-          <li role="presentation"><a href="/portfolio">Portfolio</a></li>
-          <li role="presentation"><a href="/contact">Contact</a></li>
-        </ul>
-        
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+          <ul class="nav navbar-nav">
+            <a href="/"><img src="images/tfLogoSlt.png" id="toplogo"> </a>
+            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
+            <li role="presentation"><a href="/services">Services</a></li>
+            <li role="presentation"><a href="/portfolio">Portfolio</a></li>
+            <li role="presentation"><a href="/contact">Contact</a></li>
+          </ul>
+          
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div ng-view></div>
+    <footer class="footer">
+      <center> <img src="images/tfLogoS.png"></center> 
+      <ul class="nav navbar-nav" id="footernav">
 
-  <div ng-view></div>
-
-  <footer class="footer">
-    <center> <img src="images/tfLogoS.png"></center> 
-    <ul class="nav navbar-nav" id="footernav">
-
-      <li role="presentation" class="active"><a href="/">Home</a></li>
-      <li role="presentation"><a href="/about">About</a></li>
-      <li role="presentation"><a href="/services">Services</a></li>
-      <li role="presentation"><a href="/portfolio">Portfolio</a></li>
-      <li role="presentation"><a href="/contact">Contact</a></li>
-    </ul>
-    <center>
-      <i class="fa fa-envelope fa-2x"></i>
-      <i class="fa fa-facebook fa-2x"></i>
-      <i class="fa fa-instagram fa-2x"></i>
-      <i class="fa fa-twitter fa-2x"></i>
-      <i class="fa fa-phone fa-2x"></i>
-    </center>
-    <center> <p id="copyright"> All rights reserved Third Fusion LLC &copy; 2016</p></center>
-  </footer>
-
-</div> <!-- /container -->
-
-
-<script src="bower_components/angular/angular.min.js"></script>
-<script src="bower_components/angular-route/angular-route.min.js"></script>
-<script src="bower_components/jquery/src/ajax.js"></script>
-<script src="app.js"></script>
-</body>
+        <li role="presentation" class="active"><a href="/">Home</a></li>
+        <li role="presentation"><a href="/about">About</a></li>
+        <li role="presentation"><a href="/services">Services</a></li>
+        <li role="presentation"><a href="/portfolio">Portfolio</a></li>
+        <li role="presentation"><a href="/contact">Contact</a></li>
+      </ul>
+      <center>
+        <i class="fa fa-envelope fa-2x"></i>
+        <i class="fa fa-facebook fa-2x"></i>
+        <i class="fa fa-instagram fa-2x"></i>
+        <i class="fa fa-twitter fa-2x"></i>
+        <i class="fa fa-phone fa-2x"></i>
+      </center>
+      <center> <p id="copyright"> All rights reserved Third Fusion LLC &copy; 2016</p></center>
+    </footer>
+    <!-- /container -->
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/jquery/src/ajax.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
