Added basic outline to about page.. also add jumbotrons to pages.

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,54 @@
-<h1>About</h1>
+<div class="container">
+<div class="jumbotron text-center">
+    <img src="images/tfLogoM.png">
+<h2> Local Web and Mobile development agency</h2>
+</div>
+
+</div>
+
+
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
 
            <p class="text-center" id="aboutText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum, erat in imperdiet tincidunt, mi quam condimentum <br> lacus, eu dignissim est felis at nunc. Cras a scelerisque augue.
-        </p>
+      Our goal is to help local entrepreneurs and small businesses grow sales, reach customers and build buzz.
     </div>
 </div>
+
+<div class="row text-center">
+    <div class="col-md-4">
+        <h3>Increase Web Presents</h3>
+    </div>
+    <div class="col-md-4">
+        <h3>Be Mobile</h3>
+        <btn class="btn btn-default">Contact Us</btn>
+    </div>
+    <div class="col-md-4">
+        <h3>Branding</h3>
+    </div>
+
+</div>
+    </div>
+
+<div class="row text-center">
+    <h1>Our Team </h1>
+<h3>Dedicated, hard working problem solvers fusing solutions to complex problems</h3>
+</div>
+<div class="row text-center">
+    <div class="col-md-6">
+        <center><h2>Samantha</h2></center>
+    </div>
+         <center> <div class="col-md-6"></center>
+        <h2>Ryan</h2>
+    </div>
+
+</div>
+
+<div class="text-center">
+    <h1>Let's Work</h1>
+    <btn class="btn btn-success">Get started</btn>
+</div>
+    
+   
