--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,4 +1,10 @@
-<h1>Portfolio page</h1>
+<div class="container">
+<div class="jumbotron text-center">
+
+<h1>Portfolio</h1>
+</div>
+
+</div>
 <div id="Portfolio" class="container-fluid">
     <ul class="caption-style-4" id="ulimg">
         <div class="row">
