--- a/pages/services.html
+++ b/pages/services.html
@@ -1,4 +1,10 @@
-<h1>Services Page</h1>
+<div class="container">
+<div class="jumbotron text-center">
+    <img src="images/tfLogoM.png">
+
+</div>
+
+</div>
 <div class="row overlayImg">
 
     <div class="col-md-4 text-center">
